--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="format-detection" content="telephone=no,email=no,date=no,address=no" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="apple-touch-icon" href="favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React</title>
+    <title>诺心蛋糕官网</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
